# BioMedics

./: .pre-commit-config.yaml  README.md  pyproject.toml
biomedics/clinical_application/: main.py
biomedics/create_dataset/: main.py
biomedics/extract_measurement/: bio_lexical_variant.py  main.py
biomedics/ner/: __init__.py  brat.py  evaluate.py  reader.py  scorer.py
biomedics/normalization/coder_inference/: get_normalization_with_coder.py  main.py
biomedics/normalization/fuzzy/: main.py
biomedics/utils/: extract_pandas_from_brat.py
biomedics/viz/: plot.py  prepare.py
configs/clinical_application/: config.cfg
configs/extract_measurement/: config.cfg
configs/ner/: config_complete_pipe.cfg  config_emea.cfg  config_measurement.cfg  config_medline.cfg  config_ner_final.cfg
configs/normalization/: bio_config.cfg  med_config.cfg
data/annotated_CRH/: train_test_split.md
data/drug_knowledge/: datasource.md  dic_generation.py
data/umls/: README.md  manage_umls.md
notebooks/: clinical_results.md  create_dataset.md  evaluate_measurement_extraction.md  evaluate_ner.md  evaluate_normalization.md
scripts/clinical_application/: run.py  run.sh
scripts/create_dataset/: run.py  run.sh
scripts/extract_measurement/: run.py  run.sh
scripts/ner/: dvc.yaml  evaluate.py  infer.py  package.py  run.sh
scripts/normalization/: run.sh  run_coder_inference.py  run_fuzzy_inference.py
